# NDT-SLAM-Warehouse

./: .gitignore  CHANGELOG.md  README.md
src/lidar_slam2_msgs/: CMakeLists.txt  package.xml
src/lidar_slam2_msgs/msg/: OdomWithCloud.msg
src/lidar_slam2_msgs/srv/: LoadMap.srv  SaveMap.srv
src/ndt_slam/: CMakeLists.txt  README.md  package.xml  plan.md
src/ndt_slam/config/: README.md  cargo_core_box.yaml  cargo_forbidden_zone.yaml  dual_lidar_slam_params.yaml  engineering_mapping.yaml  live_longterm_mapping.yaml  map_postprocess.yaml  merger_params.yaml  rosconsole_cargo_minimal.config  slam_params.yaml
src/ndt_slam/doc/: api.md  architecture.md  configuration.md  deployment.md  dynamic_filtering.md  engineering_mapping_guide.md  localization_runtime.md  longterm_mapping.md  map_postprocess.md  memory_guard.md  quickstart.md  roadmap.md  troubleshooting.md
src/ndt_slam/include/backup_old/: KeyFrame.hpp  LoopClosureDetector.hpp  LoopClosureNode.hpp  MappingNode.hpp  OdometryNode.hpp  PoseGraphOptimizer.hpp  ScanContext.hpp  ScanMatcher.hpp  SlamNode.hpp  SlamVisualizer.hpp  Visualizer.hpp
src/ndt_slam/include/kiss_icp/core/: Registration.hpp
src/ndt_slam/include/kiss_icp/pipeline/: KissICP.hpp
src/ndt_slam/include/lidar_slam2/: Utils.hpp  lidarFactor.hpp
src/ndt_slam/include/ndt_slam/: base_payload_channel_filter.hpp  cargo_box_estimator.hpp  crane_motion_ekf.hpp  dynamic_event_manager.hpp  human_object_filter.hpp  keyframe_manager.hpp  loop_closure.hpp  mapping.hpp  ndt_slam.hpp  odometry.hpp  payload_gate.hpp  payload_tracker.hpp  point_cloud_processing.hpp  visualizer.hpp
src/ndt_slam/launch/: cargo_forbidden_zone.launch  continue_mapping.launch  diagnostics.launch  dual_lidar_slam.launch  mapping.launch  ndt_omp_slam.launch  offline_mapping.launch  rviz.rviz  rviz.rviz.bak_before_clean_patch  slam_launch.launch  slam_launch.py  warehouse_live_longterm_mapping.launch  warehouse_runtime.launch
src/ndt_slam/launch/test/: single_lidar_slam.launch
src/ndt_slam/rviz/: cargo_safety.rviz
src/ndt_slam/scripts/: build_map_pipeline.py  continue_mapping.sh  deploy_slam.sh  inspect_cargo_runtime.sh  ndt-slam.service  offline_mapping.sh  run_cargo_big_bag_test.sh  run_cargo_v11_real.sh  run_map_postprocess.sh  slam_monitor.sh  validate_cargo_pipeline.sh  validate_cargo_pipeline_v11.sh  validate_cargo_pipeline_v13.sh  validate_cargo_pipeline_v3.sh  validate_cargo_pipeline_v5.sh  validate_cargo_pipeline_v6.sh  validate_cargo_pipeline_v8.sh  validate_rviz_core_box_only.sh  validate_v8_stable_r3.sh
src/ndt_slam/scripts/deploy/: deploy_slam.sh  monitor_longterm.sh  slam_monitor.sh
src/ndt_slam/scripts/mapping/: continue_mapping.sh  run_full_pipeline.sh
src/ndt_slam/scripts/postprocess/: analyze_map_quality.py  build_ground_clean.py  build_localization_map.py  build_navigation_grid.py  build_objects_clean.py  map_version_manager.py
src/ndt_slam/scripts/tools/: install_g2o.sh
src/ndt_slam/src/: CloudDiagnostics.cpp  PointCloudMerger.cpp  base_payload_channel_filter.cpp  cargo_box_estimator.cpp  cargo_forbidden_zone_node.cpp  crane_motion_ekf.cpp  dynamic_event_manager.cpp  human_object_filter.cpp  keyframe_manager.cpp  loop_closure.cpp  main.cpp  mapping.cpp  ndt_slam.cpp  ndt_slam.cpp.bak  odometry.cpp  payload_gate.cpp  payload_tracker.cpp  point_cloud_processing.cpp  visualizer.cpp
src/ndt_slam/src/backup_old/: KeyFrame.cpp  LoopClosureDetector.cpp  LoopClosureNode.cpp  MappingNode.cpp  OdometryNode.cpp  PoseGraphOptimizer.cpp  ScanContext.cpp  ScanMatcher.cpp  SlamNode.cpp  SlamVisualizer.cpp  Visualizer.cpp
src/ndt_slam/src/kiss_icp/core/: Registration.cpp
src/ndt_slam/src/kiss_icp/pipeline/: KissICP.cpp
test_results/cargo_avoidance/: test_report.md
