<?xml version="1.0"?>
<package format="2">
  <name>lidar_slam2_msgs</name>
  <version>1.0.0</version>
  <description>Custom messages and services for LiDAR SLAM2</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
